<resources>
    <string name="app_name">VOIP_PRO</string>
    <string name="service_name">Redfox Service</string>
    <string name="addressbook_label">Redfox</string>
    <string name="notification_title">Redfox</string>
    <string name="wait_dialog_text">Starting up</string>
    <string name="notification_registered">%s registered</string>
    <string name="notification_register_failure">%s failed to register</string>
    <string name="tunnel_host"></string>
    <string name="about_text">GNU General Public License V2\n © 2010-2016 Belledonne Communications</string>
    <string name="about_link">www.Redfox.com</string>
    <string name="sync_account_name">Redfox contacts</string>
    <string name="history_date_format">EEE, d MMM</string>
    <string name="history_detail_date_format">yyyy/MM/dd - HH:mm - </string>
    <string name="messages_date_format">dd/MM, HH:mm</string>
    <string name="messages_list_date_format">dd/MM</string>
    <string name="today_date_format">HH:mm</string>
    <string name="username">Username</string>
    <string name="display_name">Display name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Password confirmation</string>
    <string name="domain">Domain</string>
    <string name="remote_provisioning_url">URL</string>
    <string name="email">Email</string>
    <string name="delete_text">Are you sure you want to delete your selection?</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="continue_text">Continue</string>
    <string name="about">About</string>
    <string name="deny">Deny</string>
    <string name="no_account">No account configured</string>
    <string name="search">Search</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="missed">Missed</string>
    <string name="settings">Settings</string>
    <string name="connect">Connection</string>
    <string name="decline">Decline</string>
    <string name="conference">Conference</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="welcome">Welcome</string>
    <string name="assistant">Assistant</string>
    <string name="assistant_create_account">Create account</string>
    <string name="assistant_finish">Finish configuration</string>
    <string name="assistant_validate_account">Your account is created. Please check your mails to validate your account. Once it is done, come back here and click on the button.</string>
    <string name="assistant_welcome_desc">This assistant will help you to use a SIP account for your calls.</string>
    <string name="assistant_login_desc">Enter your username and password with your SIP domain</string>
    <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
    <string name="transport">Transport</string>
    <string name="assistant_login_generic">Use SIP account</string>
    <string name="assistant_remote_provisioning">Fetch remote configuration</string>
    <string name="assistant_create_account_part_1">1/2</string>
    <string name="assistant_create_account_part_2">2/2</string>
    <string name="assistant_display_name_optional">Display name (optional)</string>
    <string name="assistant_generic_account">Configure SIP account</string>
    <string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
    <string name="assistant_fetch_apply">Fetch and apply</string>
    <string name="assistant_login">Login</string>
    <string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
    <string name="assistant_remote_provisioning_login">Enter your login</string>
    <string name="assistant_account_not_validated">Your account has not been validated yet.</string>
    <string name="assistant_account_validated">Your account has been validated.</string>
    <string name="assistant_error_bad_credentials">Incorrect username or password</string>
    <string name="wizard_failed">An error occurred, try again later.</string>
    <string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
    <string name="wizard_username_unavailable">This username is already in use.</string>
    <string name="wizard_username_incorrect">Your username is invalid.</string>
    <string name="wizard_email_incorrect">Your email is invalid.</string>
    <string name="wizard_password_incorrect">Your password is invalid</string>
    <string name="wizard_passwords_unmatched">Passwords do not match.</string>
    <string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
    <string name="first_launch_no_login_password">Please enter your login and password</string>
    <string name="address_bar_hint">Enter a number</string>
    <string name="no_call_history">No call in your history</string>
    <string name="no_missed_call_history">No missed call in your history</string>
    <string name="delete_history_log">Do you want to delete selected call log?</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="delete_contacts">Do you want to delete selected contacts?</string>
    <string name="delete_contact">Do you want to delete selected contact?</string>
    <string name="sip_address">SIP address</string>
    <string name="phone_number">Phone number</string>
    <string name="contact_first_name">First name</string>
    <string name="contact_last_name">Last name</string>
    <string name="no_chat_history">No conversations</string>
    <string name="delete_conversation">Do you want to delete selected conversation?</string>
    <string name="delete_message">Do you want to delete selected message?</string>
    <string name="remote_composing">Remote is writing...</string>
    <string name="share_picture_size_small">Small</string>
    <string name="share_picture_size_medium">Medium</string>
    <string name="share_picture_size_large">Large</string>
    <string name="share_picture_size_real">Real size</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="copy_text">Copy text</string>
    <string name="image_picker_title">Select source</string>
    <string name="image_saved">Image saved</string>
    <string name="image_not_saved">Error, image not saved</string>
    <string name="wait">Please wait...</string>
    <string name="processing_image">Processing image, can take up to a few seconds depending on the size of the file</string>
    <string name="status_connected">Registered</string>
    <string name="status_not_connected">Not registered</string>
    <string name="status_in_progress">Registration in progress</string>
    <string name="status_error">Registration failed</string>
    <string name="voicemail_unread"> unread messages</string>
    <string name="menu_assistant">Assistant</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="quit">Quit</string>
    <string name="incoming_call">incoming call</string>
    <string name="outgoing_call">outgoing call</string>
    <string name="add_video_dialog">Your correspondent would like to turn on video</string>
    <string name="no_current_call">No active call</string>
    <string name="call_paused_by_remote">Your correspondent paused the call</string>
    <string name="couldnt_accept_call">An error occurred while accepting the call</string>
    <string name="zrtp_dialog">ZRTP token is %s\nYou should only accept if you have the same token as your correspondent</string>
    <string name="unknown_incoming_call_name">Unknown</string>
    <string name="call_stats_audio">Audio</string>
    <string name="call_stats_video">Video</string>
    <string name="call_stats_codec">Codec:</string>
    <string name="call_stats_upload">Upload bandwidth:</string>
    <string name="call_stats_download">Download bandwidth:</string>
    <string name="call_stats_ice">ICE connectivity:</string>
    <string name="call_stats_video_resolution">Video size:</string>
    <string name="call">Call</string>
    <string name="menu_send_log">Send log</string>
    <string name="menu_reset_log">Reset log</string>
    <string name="incall_notif_active">Audio call ongoing</string>
    <string name="incall_notif_paused">Paused call ongoing</string>
    <string name="incall_notif_video">Video capturing call ongoing</string>
    <string name="notification_started">started</string>
    <string name="unread_messages">%i unread messages</string>
    <string name="skipable_error_service_not_ready">Warning: service is not ready</string>
    <string name="error">Error</string>
    <string name="warning_wrong_destination_address">Cannot build destination address from %s</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_call_declined">Call declined</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_incompatible_media">Incompatible media parameters</string>
    <string name="error_low_bandwidth">Your correspondent has low bandwidth, video cannot be started</string>
    <string name="error_network_unreachable">Network is unreachable</string>
    <string name="error_bad_credentials">Bad credentials</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_io_error">Network error</string>
    <string name="download_image_failed">Download failed. Please check your network connection or try again later.</string>
    <string name="remote_provisioning_failure">Failed to download or apply remote provisioning profile...</string>
    <string name="remote_provisioning_again_title">Remote provisioning</string>
    <string name="remote_provisioning_again_message">Do you want to change the provisioning URI?</string>
    <string name="pref_sipaccount">SIP Account</string>
    <string name="pref_manage_title">Manage</string>
    <string name="pref_disable_account">Disable</string>
    <string name="pref_proxy">Proxy</string>
    <string name="pref_domain">Domain*</string>
    <string name="pref_passwd">Password*</string>
    <string name="pref_username">Username*</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_help_proxy">SIP proxy hostname or ip address (optional)</string>
    <string name="pref_help_outbound_proxy">Route all calls through SIP proxy</string>
    <string name="pref_help_username">Example: john if your account is john@sip.example.org</string>
    <string name="pref_help_domain">sip.example.org if your account is john@sip.example.org</string>
    <string name="pref_help_password">You have to re-enter your password if you edit your username and/or the domain</string>
    <string name="pref_expire_title">Expire</string>
    <string name="pref_avpf">AVPF</string>
    <string name="pref_avpf_rr_interval"> AVPF regular RTCP interval in seconds (between 1 and 5)</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="content_description_decline">Decline</string>
    <string name="content_description_hang_up">Hang up</string>
    <string name="content_description_accept">Accept</string>
    <string name="content_description_switch_camera">Switch camera</string>
    <string name="content_description_username_field">Username field</string>
    <string name="content_description_domain_field">Domain field</string>
</resources>