<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="30dp"
		android:orientation="vertical">

		<TextView
			android:text="SIP账户配置"
			style="@style/font6"
			android:textAllCaps="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_gravity="center"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:layout_marginTop="30dp"
			android:orientation="vertical">

			<TextView
				android:text="@string/username"
				style="@style/font13"
				android:textAllCaps="true"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<EditText
				android:id="@+id/assistant_username"
				android:textColor="@color/colorB"
				android:inputType="text|textEmailAddress"
				android:contentDescription="@string/content_description_username_field"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:singleLine="true"/>

			<TextView
				android:text="@string/password"
				style="@style/font13"
				android:textAllCaps="true"
				android:paddingTop="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<EditText
				android:id="@+id/assistant_password"
				android:textColor="@color/colorB"
				android:inputType="textPassword"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:singleLine="true"/>

			<TextView
				android:text="@string/domain"
				style="@style/font13"
				android:textAllCaps="true"
				android:paddingTop="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<EditText
				android:id="@+id/assistant_domain"
				android:textColor="@color/colorB"
				android:inputType="textEmailAddress"
				android:contentDescription="@string/content_description_domain_field"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:singleLine="true"/>

			<TextView
				android:text="@string/transport"
				style="@style/font13"
				android:textAllCaps="true"
				android:paddingTop="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<RadioGroup
				android:id="@+id/assistant_transports"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<RadioButton
					android:id="@+id/transport_udp"
					android:text="@string/pref_transport_udp"
					android:checked="true"
					android:layout_margin="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<RadioButton
					android:id="@+id/transport_tcp"
					android:text="@string/pref_transport_tcp"
					android:layout_margin="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>

				<RadioButton
					android:id="@+id/transport_tls"
					android:text="@string/pref_transport_tls"
					android:layout_margin="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</RadioGroup>

			<Button
				android:id="@+id/assistant_apply"
				android:text="@string/assistant_login"
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:layout_marginTop="20dp"/>

		</LinearLayout>
	</LinearLayout>
</ScrollView>