<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<fragment
		android:id="@+id/status"
		android:name="com.redfox.ui.StatusFragment"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		tools:layout="@layout/status" />

	<android.support.v4.widget.DrawerLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/status">

			<LinearLayout
				android:id="@+id/fragmentContainer"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="horizontal"/>

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_above="@+id/menu">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="40dp">

					<RelativeLayout
						android:id="@+id/active_call"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="visible">

						<LinearLayout
							android:id="@+id/active_call_info"
							android:background="@color/colorH"
							android:alpha="0.8"
							android:layout_width="match_parent"
							android:layout_height="80dp"
							android:layout_centerHorizontal="true"
							android:orientation="vertical">

							<TextView
								android:id="@+id/current_contact_name"
								style="@style/font5"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:paddingTop="5dp"
								android:gravity="center"
								android:layout_alignParentTop="true"
								android:layout_gravity="center"/>

							<Chronometer
								android:id="@+id/current_call_timer"
								style="@style/font2"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_below="@id/current_contact_name"
								android:layout_gravity="center"/>
						</LinearLayout>

						<LinearLayout
							android:id="@+id/remote_pause"
							android:background="@color/colorC"
							android:alpha="0.9"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:gravity="center"
							android:orientation="vertical"
							android:visibility="gone">

							<ImageView
								android:src="@drawable/waiting_time"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center"/>

							<TextView
								android:text="@string/call_paused_by_remote"
								style="@style/font16"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center"/>

						</LinearLayout>

						<ImageView
							android:id="@+id/switchCamera"
							android:src="@drawable/switch_camera"
							android:layout_width="80dp"
							android:layout_height="80dp"
							android:padding="10dp"
							android:contentDescription="@string/content_description_switch_camera"
							android:visibility="invisible"
							android:layout_below="@+id/active_call_info"
							android:layout_alignParentLeft="true"/>

					</RelativeLayout>

				</RelativeLayout>
			</FrameLayout>

			<LinearLayout
				android:id="@+id/menu"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:orientation="vertical">

				<ProgressBar
					android:id="@+id/video_in_progress"
					style="?android:attr/progressBarStyle"
					android:layout_centerHorizontal="true"
					android:layout_centerVertical="true"
					android:visibility="gone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

				<ImageView
					android:id="@+id/hang_up"
					android:src="@drawable/call_hangup"
					android:background="@drawable/hangup"
					android:contentDescription="@string/content_description_hang_up"
					android:layout_gravity="center_horizontal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0.4"
					android:padding="12dp"/>

			</LinearLayout>

		</RelativeLayout>

	</android.support.v4.widget.DrawerLayout>

	<ImageView
		android:id="@+id/speaker"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_margin="30dp"
		android:src="@drawable/speaker"/>

</RelativeLayout>
